--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -5,6 +5,16 @@
   |============================
 */
 @import url('./base/reset.css');
+@import url('./base/common.css');
+
+/* layout */
+
+@import url('./layout/header.css');
+@import url('./layout/hero.css');
+
+/* components */
+
+@import url('./components/modal.css');
 
 :root {
   font-family: Inter, Avenir, Helvetica, Arial, sans-serif;
