--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -1,5 +1,13 @@
 <header class="header">
   <div class="container">
-    <a href="#" class="header__logo">logo</a>
+    <a href="#" class="header__logo">pixabay</a>
+    <nav class="header__nav"> 
+      <ul class="header__nav__list">
+        <li class="header__nav__item"><a class="header__nav__link" href="">HOME</a></li>
+        <li class="header__nav__item"><a class="header__nav__link" href="">ABOUT US</a></li>
+        <li class="header__nav__item"><a class="header__nav__link" href="">CONTACTS</a></li>
+      </ul>
+    </nav>
+    <button id="open-modal__button" class="header__button" type="button">sign in</button>
   </div>
 </header>
