--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -1,7 +1,23 @@
 <section class="hero">
-<div class="container">
-    <h1 class="hero__title">Find your image!</h1>
-    <p class="hero__text">Lorem ipsum dolor sit.</p>
-    
-</div>
+  <div class="container">
+    <div class="hero__content">
+      <h1 class="hero__title">Find your image!</h1>
+      <p class="hero__text">Lorem ipsum dolor sit.</p>
+    </div>
+    <!-- swiper  -->
+    <div class="swiper">
+      <div class="swiper-wrapper">
+        <div class="swiper-slide">
+          <img src="/img/cat.jpg" alt="" class="slider__image" />
+        </div>
+        <div class="swiper-slide">
+          <img src="/img/goat.jpg" alt="" class="slider__image" />
+        </div>
+        <div class="swiper-slide">
+          <img src="/img/lion-tamarin.jpg" alt="" class="slider__image" />
+        </div>
+      </div>
+      <div class="swiper-pagination"></div>
+    </div>
+  </div>
 </section>
